<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_will_be_lost_text"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/easyModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mode_layouts_top_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mode_easy_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mediumModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mode_layouts_top_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mode_medium_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/hardModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mode_layouts_top_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mode_hard_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/expertModeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mode_layouts_top_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:minHeight="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/mode_expert_text"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/restartGameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/mode_layouts_top_margin"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:text="@string/restart_text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />
</LinearLayout>