<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/chanceLeftLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/firstChangeImg"
            android:layout_width="@dimen/dialog_chance_img_size"
            android:layout_height="@dimen/dialog_chance_img_size"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/content_desc_chance_image"
            app:srcCompat="@drawable/favorite_filled_red" />

        <ImageView
            android:id="@+id/secondChanceImg"
            android:layout_width="@dimen/dialog_chance_img_size"
            android:layout_height="@dimen/dialog_chance_img_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/content_desc_chance_image"
            app:srcCompat="@drawable/favorite_filled_red" />

        <ImageView
            android:id="@+id/thirdChanceImg"
            android:layout_width="@dimen/dialog_chance_img_size"
            android:layout_height="@dimen/dialog_chance_img_size"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/content_desc_chance_image"
            app:srcCompat="@drawable/favorite_filled_red" />
    </LinearLayout>

    <TextView
        android:id="@+id/bestTimeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:textColor="@color/default_text_color"
        android:textSize="20sp"
        tools:text="09:21" />

    <TextView
        android:id="@+id/bestTimeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/best_time_text"
        android:textColor="@color/default_text_color"
        android:textSize="16sp" />

    <Button
        android:id="@+id/nextGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/button_color"
        android:elevation="16dp"
        android:fontFamily="sans-serif"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:text="@string/new_game_button"
        app:cornerRadius="32dp" />

    <TextView
        android:id="@+id/goBackToHomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:minHeight="48dp"
        android:padding="8dp"
        android:text="@string/go_home_button"
        android:textAlignment="center"
        android:textColor="@color/default_text_color" />

</LinearLayout>